# vscode_cmake_QT_demo

./: CMakeLists.txt  README.md
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/app/: CMakeLists.txt  main.cpp
